@@ -8,7 +8,7 @@ static R_CallMethodDef CallEntries[] = {
     CALLDEF(sinc_c, 1),
     CALLDEF(A__c, 3),
 
-    CALLDEF(rstable_c, 3),
+    CALLDEF(rstable_c, 2),
     CALLDEF(retstable_c, 4),
 
     CALLDEF(rLog_c, 2),
